# Holistiq

./: .env.example  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/api/backend/[...path]/: route.ts
app/api/extract-checkin/: route.ts
app/api/transcribe/: route.ts
app/auth/callback/: route.ts
app/check-in/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
backend/: .env.example  README.md  dev.db  pyproject.toml
backend/app/: __init__.py  deps.py  main.py  models.py  scoring.py
backend/app/core/: config.py
backend/app/routers/: check_ins.py  family.py  insights.py  me.py
components/: CheckInExperience.tsx  CheckInModal.tsx  DailySummaryRadarChart.tsx  FamilyTab.tsx  InsightsDashboard.tsx  JournalPage.tsx  LearnTab.tsx  LogoWordmark.tsx  MoodGrid.tsx  PlantProgress.tsx  SelectChevron.tsx  SettingsPageClient.tsx  SliderQuestion.tsx  TrendLineChart.tsx  UserAvatar.tsx  VoiceCheckin.tsx  checkInData.ts  learnArticles.ts
lib/: use-check-in-window.ts  use-small-screen.ts  wellness-api.ts
lib/env/: public.ts  server.ts
lib/supabase/: client.ts  server.ts
